# animalsearch

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
.circleci/: config.yml
PytorchWildlife/: cli.py
PytorchWildlife/models/detection/yolov5/: base_detector.py
tests/: test_cli.py
